<resources>
    <string name="app_name">Design Flair</string>
    <string name="logo_description">App Logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_room_prompt">Select Room</string>
    <string name="select_design_prompt">Select Design</string>
    <string name="other_description_hint">Other Description (Optional)</string>
    <string name="generate">Generate</string>
    <string name="upscale">Upscale</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
</resources>