<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.designflair.model.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/background"
        tools:context=".SignUpActivity"
        >

        <!--<ImageView
            android:id="@+id/cyberpunkBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cyberpunk_glow"
            android:scaleType="center"
            android:animation="@anim/pulse_animation" />-->

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description"
            android:scaleType="centerCrop" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameInputLayout"
            style="@style/CustomInputLayout"
            android:layout_below="@id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameInputLayout"
            style="@style/CustomInputLayout"
            android:layout_below="@id/firstNameInputLayout"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/CustomInputLayout"
            android:layout_below="@id/lastNameInputLayout"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/CustomInputLayout"
            android:layout_below="@id/emailInputLayout"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/signInButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_below="@id/passwordInputLayout"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp"
            app:rippleColor="@color/teal_700">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/sign_up"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPasswordTextView"
            style="@style/ForgotPasswordTextStyle"
            android:layout_below="@id/signInButton"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alreadyHaveAnAccount"
            android:textColor="@color/white"
            android:layout_below="@id/forgotPasswordTextView"
            android:layout_marginTop="12dp"
            android:text="@string/alreadyHaveAnAccount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpTextView"
            android:layout_marginStart="4dp"
            style="@style/SignUpTextStyle"
            android:layout_toRightOf="@id/alreadyHaveAnAccount"
            android:layout_below="@id/forgotPasswordTextView"
            android:layout_marginTop="12dp"
            android:text="@string/sign_in" />

    </RelativeLayout>

</layout>