<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <!-- res/layout/activity_main.xml -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/background"
        tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/chatMessagesContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomOptionsContainer">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/upscaledImageView"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_margin="10dp" />
        </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/bottomOptionsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/descriptionTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_room_prompt"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_margin="8dp"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/white"
                >
                <AutoCompleteTextView
                    android:id="@+id/roomSpinner"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/white"
                app:counterTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_design_prompt"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_weight="1"
                >
                <AutoCompleteTextView
                    android:id="@+id/designSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomInputLayout"
            android:id="@+id/descriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttons">
            <com.google.android.material.textfield.TextInputEditText
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/otherDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:hint="@string/other_description_hint"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/generateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/teal_200"
                app:cardCornerRadius="12dp"
                app:cardElevation="3dp"
                app:rippleColor="@color/teal_700"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/generate"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/upscaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="12dp"
                app:rippleColor="#83183D"
                app:cardElevation="3dp"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/upscale"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>